# Apohara

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLARITY_WARP_CLEANROOM_MANIFESTO.md  CLARITY_WARP_TECHNICAL_MANIFESTO.md  CLAUDE.md  Cargo.toml  LLM_ONBOARDING.md  M008-IMPLEMENTATION.md  M008-SUMMARY.md  OPENCODE.md  README.md  ROADMAP.md  apohara-0.1.0.tgz  clarity-code-0.1.0.tgz  install.ps1  install.sh  package-lock.json  package.json  skills-lock.json  test-open.js  test-server.js  test-server2.js  tsconfig.json  vitest.config.ts
.apohara/: policy.example.yaml  state.json
.cargo/: config.toml
.clarity/: state.json
.claude/: ecc-tools.json  identity.json  settings.json
.codex/: AGENTS.md
.engram/: config.toml
.events/: m003-s02-2026-04-30T18-52-51-435Z.jsonl  m003-s02-2026-04-30T18-52-56-049Z.jsonl  m003-s02-2026-04-30T18-53-00-214Z.jsonl  m003-s02-2026-04-30T18-53-04-910Z.jsonl  m003-s02-2026-04-30T18-53-06-897Z.jsonl  m003-s02-2026-04-30T18-53-08-897Z.jsonl  m003-s02-2026-04-30T18-53-37-857Z.jsonl  m003-s02-2026-04-30T18-53-39-799Z.jsonl  m003-s02-2026-04-30T18-53-41-855Z.jsonl  m003-s02-2026-04-30T18-53-53-072Z.jsonl  m003-s02-2026-04-30T18-53-54-996Z.jsonl  (+1091 more)
crates/apohara-indexer/: Cargo.toml
crates/apohara-indexer/src/: db.rs  dependency.rs  embeddings.rs  index.rs  indexer.rs  lib.rs  main.rs  parser.rs  server.rs
crates/apohara-indexer/tests/: indexer_persistence.rs  memory_integration.rs
crates/apohara-indexer/tests/fixtures/: fixture.rs  fixture.ts  imports.rs  imports.ts
crates/apohara-sandbox/: Cargo.toml
crates/apohara-sandbox/src/: error.rs  lib.rs  main.rs  namespace.rs  permission.rs  profile.rs  runner.rs
crates/apohara-sandbox/src/profile/: fallback.rs  linux.rs  syscalls.rs
crates/apohara-sandbox/src/runner/: imp.rs
crates/apohara-sandbox/tests/: namespace_isolation.rs  runner_e2e.rs  seccomp_enforcement.rs
(+206 files in other folders)
