[package]
name = "apohara-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "apohara_indexer"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = "0.23.1"
hf-hub = "0.5.0"
anyhow = "1.0.102"
tracing = "0.1.44"
dirs = "6.0.0"
serde = "1.0.228"
serde_json = "1.0.149"

thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
