[package]
name = "apohara-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "apohara_indexer"
path = "src/lib.rs"

[[bin]]
name = "apohara-indexer"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = "0.23.1"
hf-hub = { version = "0.5.0", default-features = false, features = ["tokio", "rustls-tls", "ureq"] }
anyhow = "1.0.102"
tracing = "0.1.44"
dirs = "6.0.0"
serde = "1.0.228"
serde_json = "1.0.149"

thiserror = "2.0"
redb = "2.2"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
