[package]
name = "apohara-sandbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "apohara-sandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
nix = { version = "0.29", features = ["process", "resource", "mount", "sched", "user", "fs"] }
seccompiler = "0.5.0"
libc = "0.2.168"
tempfile = "3.14"
